Little title corrections

--- a/title.tex
+++ b/title.tex
@@ -11,7 +11,7 @@
 
 \institute{Laboratory of Nuclear Problems, Joint Institute for Nuclear Research, \\6 Joliot-Curie, Dubna, Moscow region, 141980, Russia}
 
-%TODO: rewrite the abstract a bit different, if possible
+%TODO: rewrite the abstract a bit different, if possible (the current version has been written for AYSS-18 abstracts and published already)
 
 \abstract{
 Some minimization problems, in addition to usual constant limits for single parameters, could imply constraints, i.e. additional relations between parameters $P_1, …, P_n$ in form of equations $\varphi(P_1, \dots, P_n) = 0$.
