--- a/main.tex
+++ b/main.tex
@@ -44,17 +44,17 @@
 \section{Conclusion and outlook}
 
 \begin{thebibliography}{00}
-% \bibitem{b1} J.P.~Berge, F.T.~Solmitz, H.D.~Taft, Rev.\ Sci.\ Instr.\ \textbf{32} 538 (1961)
-% \bibitem{b2} R. Bock, CERN 60-30 (1960)
-% \bibitem{b3} G.A. Korn, T.M. Korn, Mathematical handbook for scientists and engineers, McGraw-Hill (1968) 333--335; \foreignlanguage{russian}{Г. Корн, Т. Корн, Справочник по математике для научных работников и инженеров, Наука (1974) 334--336}
-% \bibitem{b4} P. Avery, KWFIT package\\ URL: \texttt{http://www.phys.ufl.edu/\textasciitilde{}avery/kwfit/}
-% \bibitem{b5} V.I. Moroz, JINR communications R-1958 (1965)\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}cyrkov/MorozJINRCommR1958.pdf}
-% % \texttt{https://drive.google.com/file/d/1z1hPsccoyXYGA-DT6-7xmeKnYBwPJCS8}
-% \bibitem{b6} V.S. Kurbatov, I.N. Silin, Nucl. Instrum. Meth. Phys. Res. A 345 (1994) 346--350
-% % \bibitem{b7} S.N. Dymov et al., Nucl. Instrum. Meth. Phys. Res. A 440 (2000) 431--437
-% \bibitem{b8} S. Barsov et al., Nucl. Instrum. Meth. Phys. Res. A 462 (2001) 364
-% \bibitem{b9} V. Komarov et al., Phys. Rev. C 93 (2016) 065206
-% \bibitem{b10} S. Dymov et al., FdModule framework\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}dymov/FdModule/index.html}
+\bibitem{b1} J.P.~Berge, F.T.~Solmitz, H.D.~Taft, Rev.\ Sci.\ Instr.\ \textbf{32} 538 (1961).
+\bibitem{b2} R. Bock, Application of a generalized method of least squares for kinematical analysis of tracks in bubble chambers,       Geneva : CERN, 1960. - 11 p. CERN 60-30 (1960).
+\bibitem{b3} G.A. Korn, T.M. Korn, Mathematical handbook for scientists and engineers, McGraw-Hill (1968) 333--335; \foreignlanguage{russian}{Г. Корн, Т. Корн, Справочник по математике для научных работников и инженеров, Наука (1974) 334--336}
+\bibitem{b4} P. Avery, KWFIT package\\ URL: \texttt{http://www.phys.ufl.edu/\textasciitilde{}avery/kwfit/}
+\bibitem{b5} V.I. Moroz, JINR communications R-1958 (1965)\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}cyrkov/MorozJINRCommR1958.pdf}
+% \texttt{https://drive.google.com/file/d/1z1hPsccoyXYGA-DT6-7xmeKnYBwPJCS8}
+\bibitem{b6} V.S. Kurbatov, I.N. Silin, Nucl. Instrum. Meth. Phys. Res. A 345 (1994) 346--350
+% \bibitem{b7} S.N. Dymov et al., Nucl. Instrum. Meth. Phys. Res. A 440 (2000) 431--437
+\bibitem{b8} S. Barsov et al., Nucl. Instrum. Meth. Phys. Res. A 462 (2001) 364
+\bibitem{b9} V. Komarov et al., Phys. Rev. C 93 (2016) 065206
+\bibitem{b10} S. Dymov et al., FdModule framework\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}dymov/FdModule/index.html}
 
 % % Zainon, R., Butler, A. P. H., Cook, N. J., Butzer, J. S., Schleich, N., de Ruiter, N., Tlustos, L., Clark, M. J., Heinz, R. & Butler, P. H. (2010). Construction and operation of the MARS-CT scanner,
 % % Internetworking Indonesia Journal 2(1): 3–10.
