Split the material from my talk into preliminary sections for the article

--- a/main.tex
+++ b/main.tex
@@ -31,17 +31,26 @@
 
 
 \section{Motivation}
+% TODO: add at least something there
 \section{Kinematic fitting}
+\input{kinfit.tex}
 \section{Cosntraint minimization aproaches}
   \subsection{Method of Lagrange multipliers}
+  \input{LagrMult.tex}
   \subsection{Penalty function method}
+  \input{penalty.tex}
   \subsection{Method of ellimination of differentials}
-%     \input{elDiff.tex}
+  \input{elDiff.tex}
 \section{Fumili minimizer and Fumili-based realization of MEDiff}
-  %программная реализация будет здесь же
+\input{fumili.tex}
+  программная реализация будет здесь же
+ \input{progImpl.tex}
 \section{Example: Monte-Carlo simulation}
+\input{toyExpl.tex}
 \section{Kinematic fitting at ANKE}
+\input{ANKEkinfit.tex}
 \section{Conclusion and outlook}
+\input{concl.tex}
 
 \begin{thebibliography}{00}
 \bibitem{b1} J.P.~Berge, F.T.~Solmitz, H.D.~Taft, Rev.\ Sci.\ Instr.\ \textbf{32} 538 (1961).
