A draft for the first part

--- a/main.tex
+++ b/main.tex
@@ -32,9 +32,11 @@
 
 \section{Motivation}
 % TODO: add at least something there
+\input{motiv.tex}
 \section{Kinematic fitting}
 \input{kinfit.tex}
 \section{Cosntraint minimization aproaches}
+  \input{constrMinIntro.tex}
   \subsection{Method of Lagrange multipliers}
   \input{LagrMult.tex}
   \subsection{Penalty function method}
@@ -43,7 +45,7 @@
   \input{elDiff.tex}
 \section{Fumili minimizer and Fumili-based realization of MEDiff}
 \input{fumili.tex}
-  программная реализация будет здесь же
+%   программная реализация будет здесь же
  \input{progImpl.tex}
 \section{Example: Monte-Carlo simulation}
 \input{toyExpl.tex}
