Add a little of history there

--- a/LagrMult.tex
+++ b/LagrMult.tex
@@ -1,4 +1,5 @@
 % Method of Lagrange multipliers
+These solutions used a method of Lagrange multipliers~\cite{b3}. It still remains the most widely used method for kinematic fitting, see e.g.~\cite{b4}.
 
 \begin{itemize}
 \item First proposed at early sixties, see e.\,g.\ J.\,P.~Berge, F.\,T.~Solmitz, H.\,D.~Taft, Rev.\ Sci.\ Instr.\ 32 (1961) 538;
