Set up the picture in the proper way

--- a/progImpl.tex
+++ b/progImpl.tex
@@ -4,7 +4,15 @@
 %Ну, или он должно появиться в предыдущей части, где мы рассказывали про Фумили
 
 %очень общая схема включения дополнения в Fumili и ROOT
-\centering\includegraphics[width=0.4\textwidth]{pics/arch1.eps}
+% \centering\includegraphics[width=0.4\textwidth]{pics/arch1.eps}
+
+\begin{figure}[h]
+\centering
+\centering\includegraphics[width=0.35\textwidth]{pics/arch1.eps}
+\caption{Схема отношений классов при фитировании. Разработанный авторами класс TFumiliWith constraints наследует от класса TFumili
+}
+\label{arch}
+\end{figure}
 
 %фактический user API. Несколько избыточен для статьи и вообще недоработан
 % \begin{verbatim}
