Add basic description of the setup and setup scheme

--- a/ANKEkinfit.tex
+++ b/ANKEkinfit.tex
@@ -1,12 +1,20 @@
 % Kinematic fitting at ANKE
-\begin{itemize}
-\item Reaction $pp \to pp$ at ANKE;
-\item Polar CMS coordinates;
-\item Undetected proton;
-\item A constraint $\left|\boldsymbol{P}^{(4)}_\mathrm{beam}+\boldsymbol{P}^{(4)}_\mathrm{targ}-\boldsymbol{P}^{(4)}_p\right|^2 = m_p^2$.
-\end{itemize}
+Разработанное расширение было использовано авторами для кинематического фита в реакции $pp \to pp$ на данных, полученных на спектрометре ANKE (Jülich, Germany) [TODO: вставить ссылку на ANKE].
 
+На рисунке \eqref{anke_scheme} можно видеть, что в процессе прохождения протонного пучка через установку часть протонов может отклоняться от направления основного пучка и не фиксироваться установкой, таким образом при анализе данных эксперимента мы можем столкнуться с разницей зафиксированных энергий и количества вещества, вступившего в реакцию с данными, полученными на выходе. Восстановить долю таких ``потерянных'' протонов мы можем, используя инвариант Лоренца $\left|\boldsymbol{P}^{(4)}_\mathrm{beam}+\boldsymbol{P}^{(4)}_\mathrm{targ}-\boldsymbol{P}^{(4)}_p\right|^2 = m_p^2$.
+
+TODO: Добавить, причем тут Polar CMS coordinates.
+
+\begin{figure}[h]
+\centering
 \centering\includegraphics[width=0.8\textwidth]{pics/setup_.eps}
+\caption{
+Схема прохождения протонного пучка через установку ANKE.
+}
+\label{anke_scheme}
+\end{figure}
+
+% \centering\includegraphics[width=0.8\textwidth]{pics/setup_.eps}
 
 % \large
 % \phantom{0}
