Add the mixing angles measurements

--- a/ANKEkinfit.tex
+++ b/ANKEkinfit.tex
@@ -18,13 +18,20 @@ TODO: Добавить, причем тут Polar CMS coordinates.
 
 % \large
 % \phantom{0}
-\includegraphics[height=0.7\textheight]{pics/drawMom.eps}
-\hfill
-\includegraphics[height=0.7\textheight]{pics/drawTh.eps}
-\hfill
-% \hspace{1em}
-\includegraphics[height=0.7\textheight]{pics/drawPhi.eps}
+% \includegraphics[height=0.7\textheight]{pics/drawMom.eps}
+% \hfill
+% \includegraphics[height=0.7\textheight]{pics/drawTh.eps}
+% \hfill
+% % \hspace{1em}
+% \includegraphics[height=0.7\textheight]{pics/drawPhi.eps}
 % \hfill
 % \phantom{0}
 
+\begin{figure}[h]
+\centering
+\centering\includegraphics[width=0.9\textwidth]{pics/anke_errs.pdf}
+\caption{
 Errors of reconstructed proton momentum in polar coordinates $(|P_p^\mathrm{cm}|, \theta_p^\mathrm{cm}, \phi_p^\mathrm{cm})$ for the $pp \to pp$ reaction at ANKE, simulated for $T_\mathrm{beam} = 700$~MeV with and without kinematic fitting.
+}
+\label{anke_scheme}
+\end{figure}
