Update conclusion draft

--- a/concl.tex
+++ b/concl.tex
@@ -1,7 +1,4 @@
 % Outlook
-\begin{itemize}
-\item Improving readability of the code and covering it with tests;
-\item Adding the method of Lagrange multipliers to the code;
-\item Adding the penalty-function method to the code;
-\item Open-source release.
-\end{itemize}
+
+В ходе работы над кодом для проекта ANKE возникла идея обобщения данного кода и его публикации в открытом доступе для использования всем сообществом. Наши ближайшие планы включают в себя рефакторинг и доработку существующего кода, настройку CI/CD для проекта.
+В долгосрочной перспективе видится интересным создание универсального фреймворка для осуществелиния кинематического фита, где с использованием единого интерфейса можно было бы производить кинетический фит не только методом исключения дифференциалов, но и с использованием метода штрафных функций или метода множителей Лагранжа.
