--- a/motiv.tex
+++ b/motiv.tex
@@ -1,17 +1,43 @@
-Распространенной ситуацией в ФЭЧ является выяснение параметров вычислительной модели путем фитирования экспериментальных данных. Как правило, вычисления подобных зависимостей являются достаточно тяжёлыми и не точными, поскольку размерность уравнений, как правило, является очень высокой. Для снижения размерности уравнений мы можем использовать данные о кинематике реакции, выраженные в форме уравнений связи.
+% Распространенной ситуацией в ФЭЧ является выяснение параметров вычислительной модели путем фитирования экспериментальных данных. Как правило, вычисления подобных зависимостей являются достаточно тяжёлыми и не точными, поскольку размерность уравнений, как правило, является очень высокой. Для снижения размерности уравнений мы можем использовать данные о кинематике реакции, выраженные в форме уравнений связи.
+%
+% Например, могут быть использованы закон сохранения массы или инвариант Лоренца.
+%
+% В общем случае данные о кинематике реакции могут быть записаны in form of equations \eqref{eq:constr}:
+% \begin{equation}
+% \label{eq:constr}
+% \left\{
+% \begin{aligned}
+% \phi_1(P) &= 0,\\
+% \cdots\\
+% \phi_n(P) &= 0,
+% \end{aligned}
+% \right.
+% \end{equation}
+% where $P$ is a vector of parameters.
+% в большинстве случаев данные уравнения связи являются нелинейными и сложными, и сокращение размерности системы \eqref{eq:constr} путем непосредственного решения оказывается невозможным или не имеющим смысла.
 
-Например, могут быть использованы закон сохранения массы или инвариант Лоренца.
-
-В общем случае данные о кинематике реакции могут быть записаны in form of equations \eqref{eq:constr}:
+Задача восстановления трека частицы (фитирования) в общем случае представляет собой задачу многомерной линейной реграссии: для каждого из треков $j$ требуется найти изначальные импульсы $P^j$, такие, чтобы теоретически вычислимое положение точек трека $\hat{c}_i^j(P^j)$, где $i$ - номер координаты точки, максимально приближалось к фактическому распределению точек $c_i^j$, при этом учитывая известные ошибки детектора $\delta c_{i^j}$. Фактически, решается задача минимизации функционала:
 \begin{equation}
-\label{eq:constr}
-\left\{
-\begin{aligned}
-\phi_1(P) &= 0,\\
-\cdots\\
-\phi_n(P) &= 0,
-\end{aligned}
-\right.
+\label{track_fit}
+F(P^j, c_i^j) = \sum_i \frac{(c_i^j - \hat{c}_i^j(P^j))^2}{{\delta c_i^j}^2}.
 \end{equation}
-where $P$ is a vector of parameters.
-в большинстве случаев данные уравнения связи являются нелинейными и сложными, и сокращение размерности системы \eqref{eq:constr} путем непосредственного решения оказывается невозможным или не имеющим смысла.
+
+Зачастую известна дополнительная информация о кинематике реакции в виде законов сохранения энергии и импульса
+\begin{equation}
+\label{cons_full}
+\sum E_\mathrm{initial} = \sum E_\mathrm{final},~\sum\vec{P}_\mathrm{initial} = \sum\vec{P}_\mathrm{final};
+\end{equation}
+или
+\begin{equation}
+\label{cons_miss}
+\displaystyle\left|\sum\boldsymbol{P}_\mathrm{initial} - \sum\boldsymbol{P}_\mathrm{final}\right|^2 = M_X^2,
+\end{equation}
+where $E$ is the energy of a particle, $\vec{P}$ and $\boldsymbol{P}$ are its three- and four-momenta correspondingly, and $M_X$ is the reaction missing mass.
+
+Её использование позволяет сузить многомерную область определения данного функционала и положительно влияет на точность получаемого решения. Выполняемый с учётом данных условйи фит называется кинематическим и находит широкое применение в ФЭЧ, например, в таких экспериментах как
+BES-III, % http://iopscience.iop.org/article/10.1088/1674-1137/34/2/009/meta
+CLAS, % https://scholar.google.ru/scholar?cites=6441758058779809394&as_sdt=2005&sciodt=0,5&hl=ru
+CMS. % http://cds.cern.ch/record/926540
+
+
+В данной статье мы собираемся рассказать об опыте разработки Fumiliu-based фреймвока для кинематического фита, в настоящий момент применяемого авторами для кинематического фита в эксперименте ANKE (Jülich, Germany)~\cite{anke}.
