--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+
 %%%%%%%%%%%%%%%%%%%%%%%%%% EDP Science %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %%%\documentclass[option]{webofc}
@@ -30,10 +31,9 @@
 % Использование такой, более точной, аппроксимации востребовано во многих областях физики. Одной из таких областей является кинематическ
 
 
-\section{Motivation}
-% TODO: add at least something there
-\input{motiv.tex}
 \section{Kinematic fitting}
+\input{motiv.tex}
+\section{Cosntraint minimization}
 \input{kinfit.tex}
 \section{Cosntraint minimization aproaches}
   \input{constrMinIntro.tex}
@@ -67,7 +67,7 @@
 \bibitem{b9} V. Komarov et al., Phys. Rev. C 93 (2016) 065206
 \bibitem{b10} S. Dymov et al., FdModule framework\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}dymov/FdModule/index.html}
 
-\bibitem{anke} ANKE collaboration official web-page\\ URL: \texttt{http://collaborations.fz-juelich.de/ikp/anke/index.shtml} 
+\bibitem{anke} ANKE collaboration official web-page\\ URL: \texttt{http://collaborations.fz-juelich.de/ikp/anke/index.shtml}
 
 % % Zainon, R., Butler, A. P. H., Cook, N. J., Butzer, J. S., Schleich, N., de Ruiter, N., Tlustos, L., Clark, M. J., Heinz, R. & Butler, P. H. (2010). Construction and operation of the MARS-CT scanner,
 % % Internetworking Indonesia Journal 2(1): 3–10.
