Rename and add history information

--- a/main.tex
+++ b/main.tex
@@ -32,9 +32,9 @@
 
 
 \section{Kinematic fitting}
-\input{motiv.tex}
+\input{01_kin_fit.tex}
 \section{Cosntraint minimization}
-\input{kinfit.tex}
+\input{02_constr_min.tex}
 \section{Cosntraint minimization aproaches}
   \input{constrMinIntro.tex}
   \subsection{Method of Lagrange multipliers}
@@ -68,6 +68,8 @@
 \bibitem{b10} S. Dymov et al., FdModule framework\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}dymov/FdModule/index.html}
 
 \bibitem{anke} ANKE collaboration official web-page\\ URL: \texttt{http://collaborations.fz-juelich.de/ikp/anke/index.shtml}
+
+\bibitem{fum_1st} S.N. Sokolov and I.N. Silin, Preprint JINR, D-810, Dubna(1961)
 
 % % Zainon, R., Butler, A. P. H., Cook, N. J., Butzer, J. S., Schleich, N., de Ruiter, N., Tlustos, L., Clark, M. J., Heinz, R. & Butler, P. H. (2010). Construction and operation of the MARS-CT scanner,
 % % Internetworking Indonesia Journal 2(1): 3–10.
