Correct introduction into constr. min. methods

--- a/02_constr_min.tex
+++ b/02_constr_min.tex
@@ -19,16 +19,9 @@
 \begin{aligned}
 \phi_1(P) &= 0,\\
 \cdots\\
-\phi_n(P) &= 0.
+\phi_k(P) &= 0.
 \end{aligned}
 \right.
 \end{equation}
 предмет интереса представляют случаи, когда система \eqref{eq:constr} является нелинейной и её решение ``в лоб'' является невозможным либо нецелесообразным в условиях заданных внешних ораничений.
 Возникает необходимость не потерять важную информацию и провести расчёты максимально точно, при этом уложившись в ограничения по времени и трудоемкости работы.
-
-Первые идеи по преодолению подобных сложностей в задачах кинематического фита были предложены в 60-е. Солмицом и Бёрджем \cite{b1} было предложено применение метода множителей Лагранжа (см. далее), который до сих пор находит широкое применение в задачах подобного типа \cite{b4}. %сюда же можно ещё ссылки на эксперименты, там тоже сплошнй Лагранж
-Примерно в то же время специалистами ОИЯИ было предложено применение минимизации с тяжёлым членом \cite{b5} (будет описано далее) и разработан пакет для минимизации $\chi^2$-функционалов FUMILI~\cite{fum_1st}.
-В данной статье нам интересно сравнить данные методы с 
-Использование метода устранения производных для кинфита со связями, было предложено одним из соавторов данной работы.
-
-TODO: подвести к eloimination of differentials.
