--- a/constrMinIntro.tex
+++ b/constrMinIntro.tex
@@ -1,4 +1,8 @@
-% constrMinIntro.tex
-The problem of minimizing functionals with constraints~\eqref{eq:constr} arises, for example, in the task of kinematic fitting. This problem traces back to early sixties, when first solutions for the problem were proposed~\cite{b1,b2}.
-Первые решения в области минимизации со связями в задачах кинематического фита были предложены в начала 60-х. Классическим, до сих пор широко применимым методом здесь является метод множителей Лагранжа (ссылка), который используется, например в (ссылка). Специалистами ОИЯИ (ссылка) примерно в те же годы было предложено применение минимизации с использованием штрафных функций.
-Подход, предложенный одним из авторов доклада в 90-е (ссылка) [очень крутой - TODO: прописать, почему.]
+% % constrMinIntro.tex
+% The problem of minimizing functionals with constraints~\eqref{eq:constr} arises, for example, in the task of kinematic fitting. This problem traces back to early sixties, when first solutions for the problem were proposed~\cite{b1,b2}.
+% Первые решения в области минимизации со связями в задачах кинематического фита были предложены в начала 60-х. Классическим, до сих пор широко применимым методом здесь является метод множителей Лагранжа (ссылка), который используется, например в (ссылка). Специалистами ОИЯИ (ссылка) примерно в те же годы было предложено применение минимизации с использованием штрафных функций.
+% Подход, предложенный одним из авторов доклада в 90-е (ссылка) [очень крутой - TODO: прописать, почему.]
+
+Первые идеи по преодолению подобных сложностей в задачах кинематического фита были предложены в 60-е. Солмицом и Бёрджем \cite{b1} было предложено применение метода множителей Лагранжа (см. далее), который до сих пор находит широкое применение в задачах подобного типа \cite{b4}. %сюда же можно ещё ссылки на эксперименты, там тоже сплошнй Лагранж
+Примерно в то же время специалистами ОИЯИ было предложено применение минимизации с тяжёлым членом \cite{b5} (будет описано далее) и разработан пакет для минимизации $\chi^2$-функционалов FUMILI~\cite{fum_1st}.
+Позже, одним из соавторов данной работы, было предложено \cite{b6} использование метода устранения производных для кинфита со связями.
