--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 \input{01_kin_fit.tex}
 \section{Cosntraint minimization}
 \input{02_constr_min.tex}
-\section{Cosntraint minimization aproaches}
+\section{Methods}
   \input{constrMinIntro.tex}
   \subsection{Method of Lagrange multipliers}
   \input{LagrMult.tex}
