--- a/LagrMult.tex
+++ b/LagrMult.tex
@@ -9,7 +9,7 @@
 % \item Still the most widely used method for kinematic fitting, see e.\,g.\ KWFIT package \texttt{http://www.phys.ufl.edu/\textasciitilde{}avery/kwfit/}.
 % \end{itemize}
 
-Метод множителей Лагранжа является классическим подходом, нашедшим свое широкое применение в различных областях деятелньости человека. Задачу (1), (4) предлагается решать путем нахождения экстремума функции Лагранжа:
+Метод множителей Лагранжа является классическим подходом, нашедшим свое широкое применение в различных областях деятелньости человека. Задачу \label{track_fit}, \eqref{eq:constr} предлагается решать путем нахождения экстремума функции Лагранжа:
 \begin{equation}
  \label{lagr}
  L_j(P^j, \lambda^j) = F(P^j, \hat{c}_i^j) + \sum_k \lambda^j_k \varphi_k(P^j),
