--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \documentclass{webofc}
 \usepackage[varg]{txfonts}   % Web of Conferences font
 \usepackage{color}
+% \usepackage[usenames]{color}
+% \usepackage{colortbl}
 %
 \begin{document}
   \input{title.tex}   %DONE
