Organize common formula notation through the first part of article

--- a/01_kin_fit.tex
+++ b/01_kin_fit.tex
@@ -21,6 +21,7 @@
 \label{track_fit}
 F(P^j, c_i^j) = \sum_i \frac{(c_i^j - \hat{c}_i^j(P^j))^2}{{\delta c_i^j}^2}.
 \end{equation}
+Здесь и далее для простоты будем опускать верхний коэффициент $j$.
 
 Зачастую известна дополнительная информация о кинематике реакции в виде законов сохранения энергии и импульса
 \begin{equation}
