--- a/02_constr_min.tex
+++ b/02_constr_min.tex
@@ -15,13 +15,14 @@
 Поставленная задача нахождения минимума функционала \eqref{track_fit} может быть сформулирована как задача условной минимизации в канонической форме, с учетом известных законов сохранения \eqref{cons_full}--\eqref{cons_miss}, выраженных в виде:
 \begin{equation}
 \label{eq:constr}
-\left\{
-\begin{aligned}
-\phi_1(P) &= 0,\\
-\cdots\\
-\phi_k(P) &= 0.
-\end{aligned}
-\right.
+% \left\{
+% \begin{aligned}
+% \phi_1(P) &= 0,\\
+% \cdots\\
+% \phi_k(P) &= 0.
+% \end{aligned}
+% \right.
+\phi_k(P) = 0, 1 \leqslant k  \leqslant K.
 \end{equation}
-предмет интереса представляют случаи, когда система \eqref{eq:constr} является нелинейной и её решение ``в лоб'' является невозможным либо нецелесообразным в условиях заданных внешних ораничений.
+Предмет интереса представляют случаи, когда система \eqref{eq:constr} является нелинейной и её решение ``в лоб'' является невозможным либо нецелесообразным в условиях заданных внешних ораничений.
 Возникает необходимость не потерять важную информацию и провести расчёты максимально точно, при этом уложившись в ограничения по времени и трудоемкости работы.
