--- a/penalty.tex
+++ b/penalty.tex
@@ -14,9 +14,9 @@
 
 Суть метода состоит в сведении задачи минимизации функции \label{track_fit} при выполнении условий \eqref{eq:constr} к задаче поиска безусловного минимума функции
 \begin{equation}
- \tilde{\Psi}(x) = F(x) + T\sum_{i=1}^{m}\phi_i^2(x),~T \rightarrow \infty.
+ \tilde{\Psi}(P, c_i) = F(P, c_i) + T\sum_{k=1}^{K}\phi_k^2(P),~T \rightarrow \infty.
 \end{equation}
 
-При этом функцию $ \tilde{\Psi}(x)$ называют штрафной или функцией с тяжёлым членом $T$. При такой постановке при выходе за пределы, задаваемые ограничениями \eqref{eq:constr}, слагаемое ``с тяжёлыми членом'' будет увеличивать значение минимизируемой функции, таким образом гарантируя, что оптимальное значение может быть найдено только в пределах области ограничений.
+При этом функцию $ \tilde{\Psi}(P, c_i)$ называют штрафной или функцией с тяжёлым членом $T$. При такой постановке при выходе за пределы, задаваемые ограничениями \eqref{eq:constr}, слагаемое ``с тяжёлыми членом'' будет увеличивать значение минимизируемой функции, таким образом гарантируя, что оптимальное значение может быть найдено только в пределах области ограничений.
 
 Минимизация штрафной функции может выполняться с использованием любого метода оптимизации, например, градиентного спуска.
