--- a/LagrMult.tex
+++ b/LagrMult.tex
@@ -12,8 +12,8 @@
 Метод множителей Лагранжа является классическим подходом, нашедшим свое широкое применение в различных областях деятелньости человека. Задачу \label{track_fit}, \eqref{eq:constr} предлагается решать путем нахождения экстремума функции Лагранжа:
 \begin{equation}
  \label{lagr}
- L_j(P^j, \lambda^j) = F(P^j, \hat{c}_i^j) + \sum_k \lambda^j_k \varphi_k(P^j),
+ \mathcal{L}(P, c_i, \lambda) = F(P, c_i) + \sum_k \lambda_k \phi_k(P),
 \end{equation}
-необходимым условием которого является равенство нулю ее частных производных по переменным $P^j$ и неопределенным множителям $\lambda^j_k$:
-\[\frac{\partial L_j}{\partial P^j_1} = \frac{\partial L_j}{\partial P^j_2} = \cdots = \frac{\partial L_j}{\partial P^j_n} = \frac{\partial L_j}{\partial \lambda^j_1} = \cdots = \frac{\partial L_j}{\partial \lambda^j_k} = 0,\]
+необходимым условием которого является равенство нулю ее частных производных по переменным $P$ и неопределенным множителям $\lambda_k$:
+\[\frac{\partial \mathcal{L}}{\partial P_1} = \frac{\partial \mathcal{L}}{\partial P_2} = \cdots = \frac{\partial \mathcal{L}}{\partial P_n} = \frac{\partial \mathcal{L}}{\partial \lambda_1} = \cdots = \frac{\partial \mathcal{L}}{\partial \lambda_k} = 0,\]
 Далее полученная система может быть решена с помощью метода Гаусса или используя формулы Крамера.
