Omit unimportant upper and bottom indexes

--- a/02_constr_min.tex
+++ b/02_constr_min.tex
@@ -22,7 +22,7 @@
 % \phi_k(P) &= 0.
 % \end{aligned}
 % \right.
-\phi_k(P) = 0, 1 \leqslant k  \leqslant K.
+\phi_k(P) = 0, 1 \leqslant k  \leqslant n_c.
 \end{equation}
 Предмет интереса представляют случаи, когда система \eqref{eq:constr} является нелинейной и её решение ``в лоб'' является невозможным либо нецелесообразным в условиях заданных внешних ораничений.
 Возникает необходимость не потерять важную информацию и провести расчёты максимально точно, при этом уложившись в ограничения по времени и трудоемкости работы.
