--- a/penalty.tex
+++ b/penalty.tex
@@ -8,15 +8,15 @@
 % \item The method is very robust and almost always converges, which could be both a benefit (you won't miss a minimum) and a drawback (you should carefully control that your minimum is reasonable).
 % \end{itemize}
 
-\textcolor{red}{TODO: привести к общему знаменателю обозначения в формуле с обозначениями в остальной статье!!!}
+%
 
 Метод кинематического фита с тяжелым членом, предложенный В.И.Морозом, основан на методе штрафных функций решения задач условной оптимизации.
 
 Суть метода состоит в сведении задачи минимизации функции \label{track_fit} при выполнении условий \eqref{eq:constr} к задаче поиска безусловного минимума функции
 \begin{equation}
- \tilde{\Psi}(P, c_i) = F(P, c_i) + T\sum_{k=1}^{K}\phi_k^2(P),~T \rightarrow \infty.
+ \tilde{\Psi}(P, c) = F(P, c) + T\sum_{k=1}^{K}\phi_k^2(P),~T \rightarrow \infty.
 \end{equation}
 
-При этом функцию $ \tilde{\Psi}(P, c_i)$ называют штрафной или функцией с тяжёлым членом $T$. При такой постановке при выходе за пределы, задаваемые ограничениями \eqref{eq:constr}, слагаемое ``с тяжёлыми членом'' будет увеличивать значение минимизируемой функции, таким образом гарантируя, что оптимальное значение может быть найдено только в пределах области ограничений.
+При этом функцию $ \tilde{\Psi}(P, c)$ называют штрафной или функцией с тяжёлым членом $T$. При такой постановке при выходе за пределы, задаваемые ограничениями \eqref{eq:constr}, слагаемое ``с тяжёлыми членом'' будет увеличивать значение минимизируемой функции, таким образом гарантируя, что оптимальное значение может быть найдено только в пределах области ограничений.
 
 Минимизация штрафной функции может выполняться с использованием любого метода оптимизации, например, градиентного спуска.
